--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:openDrawer="start"
     android:background="#fff"
+    android:id="@+id/drawer_layout"
     tools:context=".Activities.MainActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
+    <!--<com.google.android.material.appbar.AppBarLayout
         android:id="@+id/toolbarTop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -15,34 +17,32 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/logo"
-                    android:layout_marginLeft="-10dp"
-                    android:layout_centerHorizontal="true" />
 
-            </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
 
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbarTop"
-        android:id="@+id/drawer_layout"
-        tools:openDrawer="start">
+    </com.google.android.material.appbar.AppBarLayout>-->
 
 
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent">
+
+           <ImageView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:src="@drawable/ic_menu_black_24dp"
+               android:layout_alignParentTop="true"
+               android:layout_alignParentLeft="true"
+               android:id="@+id/nav_icon"
+               android:layout_margin="15dp"/>
+
+           <FrameLayout
+               android:id="@+id/fragment_container"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               />
+       </RelativeLayout>
 
 
 
@@ -58,5 +58,3 @@
             />
 
     </androidx.drawerlayout.widget.DrawerLayout>
-
-</RelativeLayout>
