--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,33 +9,37 @@
     tools:context=".Activities.SignUp">
 
 
-    <ImageButton
-        android:id="@+id/backBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:background="#fff"
-        android:src="@drawable/ic_arrow_back_black_24dp" />
-
     <TextView
         android:id="@+id/txt1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="83dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/amarante"
         android:text="Sign Up"
         android:textColor="@android:color/black"
         android:textSize="35sp"
         android:textStyle="bold" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageIV"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:civ_border_color="@color/colorBlack"
+        app:civ_border_width="1dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/txt1"
+        android:src="@drawable/icon" />
+
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txt1"
+        android:layout_below="@+id/imageIV"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="16dp"
